--- a/jupyter_notebooks/cleaning_profile_data.ipynb
+++ b/jupyter_notebooks/cleaning_profile_data.ipynb
@@ -4589,13 +4589,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_10776\\1246388182.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_15024\\1246388182.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  target_pv_data['date'] = target_pv_data.index\n",
-      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_10776\\1246388182.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\jamil\\AppData\\Local\\Temp\\ipykernel_15024\\1246388182.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4623,7 +4623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4802,7 +4802,7 @@
        "[45216 rows x 7 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4834,11 +4834,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "possible_files = [i for i, data in enumerate(conso_data) if data.index[-1].month > 3 and data.index[-1].year == 2021] "
+    "possible_files = [i for i, data in enumerate(conso_data) if data.index[-1].month > 3 and data.index[-1].year == 2021] \n",
+    "file_length_array = [len(conso_data[i]) for i in possible_files]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the most common integer in the array file_length_array.\n",
+    "most_common_file_length = max(set(file_length_array), key=file_length_array.count)\n"
    ]
   },
   {
@@ -4920,14 +4931,12 @@
     "for i in range(len(conso_data)):\n",
     "    conso_data[i] = conso_data[i][conso_data[i].index <= '2021-04-15 23:45:00']\n",
     "for i in possible_files:\n",
-    "    print(conso_data[i].index[-1])\n",
-    "\n",
-    "    \n"
+    "    print(conso_data[i].index[-1])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4935,8 +4944,9 @@
     "    conso_data[i]['normalized_P'] = create_normalized_column(conso_data[i], 'P')\n",
     "    conso_data[i]['normalized_Q'] = create_normalized_column(conso_data[i], 'Q')\n",
     "    conso_data[i]['date'] = conso_data[i].index\n",
-    "    # write csv file to ../data/processed/consumption folder.\n",
-    "    write_data_to_csv(conso_data[i], '../data/processed/consumption/conso_' + str(i) + '_processed.csv')"
+    "    if len(conso_data[i]) == most_common_file_length:\n",
+    "        # write csv file to ../data/processed/consumption folder.\n",
+    "        write_data_to_csv(conso_data[i], '../data/processed/consumption/conso_' + str(i) + '_processed.csv')"
    ]
   }
  ],
