add new functionality to thesis_package

--- a/jupyter_notebooks/cleaning_profile_data.ipynb
+++ b/jupyter_notebooks/cleaning_profile_data.ipynb
@@ -5,6 +5,19 @@
    "metadata": {},
    "source": [
     "# Data Preprocessing\n",
+    "**Summary of Article**\n",
+    "- PV:\n",
+    "    - Description of raw dataset.\n",
+    "    - Missing values and imputation.\n",
+    "    - Normalized production profiles creation.\n",
+    "- Wind:\n",
+    "    - Description of raw dataset.\n",
+    "    - Missing Values and Imputation.\n",
+    "    - Normalized production profiles creation.\n",
+    "- Consumption:\n",
+    "    - Description of raw dataset.\n",
+    "    - Normalized production profiles creation.\n",
+    "\n",
     "The profiles are composed by consumption and production data. The data is real and anonymized, which will provided a more realistic representation of the behaviour of the systems in this study. The data is composed by:\n",
     "- Consumption data: 69 time stamped data with the duration of one year.\n",
     "- PV Production data: 10 time stamped data with the duration of one year.\n",
