--- a/jupyter_notebooks/pandapower_time_series_power_flow.ipynb
+++ b/jupyter_notebooks/pandapower_time_series_power_flow.ipynb
@@ -11,6 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Summary of Article**\n",
+    "- Network setup.\n",
+    "- Time Series Power Flow using pandapower python library.\n",
+    "\n",
     "The pandapower library provides a powerful time series power flow tool, that provided this master thesis with the ground truth results that the will be used to train the various prediction models."
    ]
   },
@@ -153,19 +157,6 @@
     "        q_gen_profile_kvar['gen_' + str(gen.id)] = 0\n",
     "    return p_load_profile_kw, q_load_profile_kvar, p_gen_profile_kw, q_gen_profile_kvar \n",
     "p_load_profile_kw, q_load_profile_kvar, p_gen_profile_kw, q_gen_profile_kvar = create_power_flow_profiles_df(network)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# limit all the dataframes to date before the 2020-04-18\n",
-    "# p_load_profile_kw = p_load_profile_kw.loc['2020-04-18':]\n",
-    "# q_load_profile_kvar = q_load_profile_kvar.loc['2020-04-18':]\n",
-    "# p_gen_profile_kw = p_gen_profile_kw.loc['2020-04-18':]\n",
-    "# q_gen_profile_kvar = q_gen_profile_kvar.loc['2020-04-18':]\n"
    ]
   },
   {
