--- a/jupyter_notebooks/strategy_design_pattern_for_ml.ipynb
+++ b/jupyter_notebooks/strategy_design_pattern_for_ml.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "A toy example of the Strategy design pattern in Python is presented below.\n",
-    "```\n",
+    "``` python\n",
     "# Imports \n",
     "import pandas as pd\n",
     "from abc import ABC, abstractmethod\n",
