--- a/jupyter_notebooks/best_features_train.ipynb
+++ b/jupyter_notebooks/best_features_train.ipynb
@@ -220,16 +220,16 @@
     "# Linear Regression\n",
     "X_train['season'] = le.fit_transform(X_train['season'])\n",
     "X_test['season'] = le.fit_transform(X_test['season'])   \n",
-    "if 'regressor_all_features.pickle' not in os.listdir():\n",
+    "if 'regressor_all_features.pickle' not in os.listdir('pickles'):\n",
     "    regressor_all_features = my_ai.Context(strategy=my_ai.LinearRegressionStrategy())\n",
     "    regressor_all_features.fit(data={'X_train': X_train, 'y_train': y_train})\n",
     "    # Gradient Boost Regression\n",
     "    hyper_params = {'n_estimators': 1000, 'learning_rate': 0.1, 'loss': 'squared_error'}\n",
     "    regressor_all_features.strategy = my_ai.GradientBoostRegressorStrategy(hyper_params)\n",
     "    regressor_all_features.fit(data={'X_train': X_train.values, 'y_train': y_train.values})\n",
-    "    utils.serialize_object('regressor_all_features', regressor_all_features)\n",
+    "    utils.serialize_object('pickles\\\\regressor_all_features', regressor_all_features)\n",
     "else: \n",
-    "    regressor_all_features = utils.deserialize_object('regressor_all_features')\n",
+    "    regressor_all_features = utils.deserialize_object('pickles\\\\regressor_all_features')\n",
     "prediction_lr_all_features = regressor_all_features.strategies[0].predict(data={'X_test': X_test})\n",
     "prediction_lr_all_features = pd.DataFrame(prediction_lr_all_features , columns=y_test.columns)\n",
     "prediction_gb_all_features =  regressor_all_features.strategies[1].predict(data={'X_test': X_test})\n",
