--- a/jupyter_notebooks/cleaning_profile_data.ipynb
+++ b/jupyter_notebooks/cleaning_profile_data.ipynb
@@ -4125,22 +4125,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# January 2020\n",
-    "target_index_jan = get_index_of_time_frame(target_wind_data, ['2020-01-01 00:00:00',  '2020-01-01 02:45:00'])\n",
-    "filler_index_jan = get_index_of_time_frame(target_wind_data, ['2020-01-02 00:00:00',  '2020-01-02 02:45:00'])\n",
-    "target_pv_data.loc[target_index_jan, 'T'] = target_wind_data.loc[filler_index_jan]['T'].values\n",
-    "# December 2021\n",
-    "target_index_dec = get_index_of_time_frame(target_wind_data, ['2021-12-31 21:15:00',  '2021-12-31 23:45:00'])\n",
-    "filler_index_dec = get_index_of_time_frame(target_wind_data, ['2021-12-30 21:15:00',  '2021-12-30 23:45:00'])\n",
-    "target_wind_data.loc[target_index_dec, 'T'] = target_wind_data.loc[filler_index_dec]['T'].values"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4590,7 +4574,8 @@
    "outputs": [],
    "source": [
     "def write_data_to_csv(data, file_name):\n",
-    "    data.to_csv(file_name, index=False)"
+    "    # data.to_csv(file_name, index=False) Uncomment to write data\n",
+    "    pass"
    ]
   },
   {
