--- a/jupyter_notebooks/create_target_feature.ipynb
+++ b/jupyter_notebooks/create_target_feature.ipynb
@@ -10,6 +10,8 @@
     "- Explication of the methodology.\n",
     "- Import from csv.\n",
     "- Crate the target feature for min_voltage_bus, max_voltage_bus, and max_current_line.\n",
+    "- Create Boolean Dataset.\n",
+    "- Create Balanced Dataset.\n",
     "- Save to csv.\n",
     "\n",
     "## Methodology\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -173,25 +175,359 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Create Boolean Dataset\n",
+    "The target feature is created using the formula above. The target feature is then converted to a boolean dataset. The boolean dataset will further be used for binary classification tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Take a df and turn turn a cell to 1 when it is grater than 0, otherwise 0.\n",
+    "def turn_boolean(df):\n",
+    "    df = df.apply(lambda x: x.apply(lambda y: 1 if y > 0 else 0))\n",
+    "    return df\n",
+    "res_bus_vm_pu_min_bool_constr = turn_boolean(res_bus_vm_pu_min_constr)\n",
+    "res_bus_vm_pu_max_bool_constr = turn_boolean(res_bus_vm_pu_max_constr)\n",
+    "res_line_i_ka_max_bool_constr = turn_boolean(res_line_i_ka_max_constr)\n",
+    "res_line_percent_bool_constr = turn_boolean(res_line_percent_constr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ext_grid</th>\n",
+       "      <th>bus_1</th>\n",
+       "      <th>bus_2</th>\n",
+       "      <th>bus_3</th>\n",
+       "      <th>bus_4</th>\n",
+       "      <th>bus_5</th>\n",
+       "      <th>bus_6</th>\n",
+       "      <th>bus_7</th>\n",
+       "      <th>bus_8</th>\n",
+       "      <th>bus_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bus_30</th>\n",
+       "      <th>bus_31</th>\n",
+       "      <th>bus_17</th>\n",
+       "      <th>bus_21</th>\n",
+       "      <th>bus_24</th>\n",
+       "      <th>bus_18</th>\n",
+       "      <th>bus_23</th>\n",
+       "      <th>bus_27</th>\n",
+       "      <th>bus_32</th>\n",
+       "      <th>bus_33</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ext_grid  bus_1  bus_2  bus_3  bus_4  bus_5  bus_6  bus_7  bus_8  bus_9  \\\n",
+       "0         0      0      0      0      0      0      0      0      0      0   \n",
+       "1         0      0      0      0      0      0      0      0      0      0   \n",
+       "\n",
+       "   ...  bus_30  bus_31  bus_17  bus_21  bus_24  bus_18  bus_23  bus_27  \\\n",
+       "0  ...       0       0       0       0       0       1       0       0   \n",
+       "1  ...       0       0       0       0       0       1       0       0   \n",
+       "\n",
+       "   bus_32  bus_33  \n",
+       "0       0       0  \n",
+       "1       0       0  \n",
+       "\n",
+       "[2 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_bus_vm_pu_min_bool_constr.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ext_grid</th>\n",
+       "      <th>bus_1</th>\n",
+       "      <th>bus_2</th>\n",
+       "      <th>bus_3</th>\n",
+       "      <th>bus_4</th>\n",
+       "      <th>bus_5</th>\n",
+       "      <th>bus_6</th>\n",
+       "      <th>bus_7</th>\n",
+       "      <th>bus_8</th>\n",
+       "      <th>bus_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bus_30</th>\n",
+       "      <th>bus_31</th>\n",
+       "      <th>bus_17</th>\n",
+       "      <th>bus_21</th>\n",
+       "      <th>bus_24</th>\n",
+       "      <th>bus_18</th>\n",
+       "      <th>bus_23</th>\n",
+       "      <th>bus_27</th>\n",
+       "      <th>bus_32</th>\n",
+       "      <th>bus_33</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.004559</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.003854</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ext_grid  bus_1  bus_2  bus_3  bus_4  bus_5  bus_6  bus_7  bus_8  bus_9  \\\n",
+       "0         0      0      0      0      0      0      0    0.0    0.0    0.0   \n",
+       "1         0      0      0      0      0      0      0    0.0    0.0    0.0   \n",
+       "\n",
+       "   ...  bus_30  bus_31  bus_17  bus_21  bus_24    bus_18  bus_23  bus_27  \\\n",
+       "0  ...       0       0       0       0       0  0.004559       0       0   \n",
+       "1  ...       0       0       0       0       0  0.003854       0       0   \n",
+       "\n",
+       "   bus_32  bus_33  \n",
+       "0       0       0  \n",
+       "1       0       0  \n",
+       "\n",
+       "[2 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_bus_vm_pu_min_constr.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Balanced Dataset\n",
+    "The balanced dataset consists only of the rows in which at least one target feature is non-zerio, that is, there is at least on constraint violation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_balanced_df(df, bool_df):\n",
+    "    indexes = [] \n",
+    "    for row in bool_df.iterrows():\n",
+    "        if not row[1].any():\n",
+    "            indexes.append(row[0])\n",
+    "    return df.drop(indexes)\n",
+    "res_bus_vm_pu_min_bal_constr = get_balanced_df(res_bus_vm_pu_min_constr ,res_bus_vm_pu_min_bool_constr)\n",
+    "res_bus_vm_pu_max_bal_constr = get_balanced_df(res_bus_vm_pu_max_constr ,res_bus_vm_pu_max_bool_constr)\n",
+    "res_line_i_ka_max_bal_constr = get_balanced_df(res_line_i_ka_max_constr ,res_line_i_ka_max_bool_constr)\n",
+    "res_line_percent_bal_constr = get_balanced_df(res_line_percent_constr ,res_line_percent_bool_constr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is to notice that the balanced dataset is not the same as the original dataset.\n",
+    "# TODO PLOT difference between size of datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Save to csv\n",
     "The target features are saved to a csv file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create timestaps feature to the dataframe and save it to csv.\n",
+    "# min_vm_pu\n",
     "res_bus_vm_pu_min_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_min_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_constr.csv', index=False)\n",
+    "res_bus_vm_pu_min_bool_constr['timestamps'] = timestamps\n",
+    "res_bus_vm_pu_min_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_bool_constr.csv', index=False)\n",
+    "res_bus_vm_pu_min_bal_constr['timestamps'] = timestamps\n",
+    "res_bus_vm_pu_min_bal_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_bal_constr.csv', index=False)\n",
+    "# max_vm_pu\n",
     "res_bus_vm_pu_max_constr['timestamps'] = timestamps\n",
     "res_bus_vm_pu_max_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_constr.csv', index=False)\n",
+    "res_bus_vm_pu_max_bool_constr['timestamps'] = timestamps\n",
+    "res_bus_vm_pu_max_bool_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bool_constr.csv', index=False)\n",
+    "res_bus_vm_pu_max_bal_constr['timestamps'] = timestamps\n",
+    "res_bus_vm_pu_max_bal_constr.to_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_bal_constr.csv', index=False)\n",
+    "# max i_ka\n",
     "res_line_i_ka_max_constr['timestamps'] = timestamps\n",
     "res_line_i_ka_max_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_constr.csv', index=False)\n",
+    "res_line_i_ka_max_bool_constr['timestamps'] = timestamps\n",
+    "res_line_i_ka_max_bool_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_bool_constr.csv', index=False)\n",
+    "res_line_i_ka_max_bal_constr['timestamps'] = timestamps\n",
+    "res_line_i_ka_max_bal_constr.to_csv('..\\data\\ground_truth\\\\res_line_i_ka_max_bal_constr.csv', index=False)\n",
+    "# max line loading\n",
     "res_line_percent_constr['timestamps'] = timestamps\n",
-    "res_line_percent_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_constr.csv', index=False)"
+    "res_line_percent_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_constr.csv', index=False)\n",
+    "res_line_percent_bool_constr['timestamps'] = timestamps\n",
+    "res_line_percent_bool_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_bool_constr.csv', index=False)\n",
+    "res_line_percent_bal_constr['timestamps'] = timestamps\n",
+    "res_line_percent_bal_constr.to_csv('..\\data\\ground_truth\\\\res_line_percent_max_bal_constr.csv', index=False)\n"
    ]
   }
  ],
